Fix a small issue

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
         Start the project with the following tasks:
       </p>
       <ul>
-        <li>Create a Github account (using as a username something professional like the first letter of your first name and your family name)</li>
-        <li>One member of your team, your team leader, will then create a Github organization with the name "alma2015" followed by the first 3 letters of the family name of the members of your team</li>
+        <li>Create a Github account or use an existing account but with your real name setup</li>
+        <li>One member of your team, your team leader, will then create a Github organization with a name or reuse an existing organization</li>
         <li>Add the accounts of all the members of your team to the organization as members along with my account (sbegaudeau)</li>
-        <li>The team leader will create a repository named like your organization in the organisation (not in her/his profile). This repository will act as the main repository</li>
-        <li>One member of the team will create an issue in the main repository with the tag "project management" (previously created by the team leader) to request the addition of a README.md file describing the project (only a couple of lines)</li>
-        <li>One of the member of the team will create a file named README.md at the root of the repository and she/he will push it to her/his clone of the main repository. Then using a pull request, she/he will submit a review to the main repository</li>
+        <li>The team leader will create a repository named in the organisation (not in her/his profile). Create the repository with a README.md file inside. This repository will act as the main repository. All the other members should fork this repository in their own Github profile and clone this fork</li>
+        <li>One member of the team will create an issue in the main repository with the label "project management" (previously created by the team leader) to request the edition of the README.md file describing the project (only a couple of lines)</li>
+        <li>One of the member of the team will edit the file named README.md at the root of the repository and she/he will push it to her/his clone of the main repository. Then using a pull request, she/he will submit a review to the main repository</li>
         <li>The member of the team who has created the issue will review the pull request and she/he will request an improvement to the pull request to add the copyright of the project. After having an updated version of the pull request, if it is valid, the pull request will be accepted</li>
         <li>Repeat for the files LICENSE.md and CONTRIBUTE.md by changing the members of the team involved in creating the issue and creating the commit. Those files should respectively contain the license of the project (EPL v1.0) and a small contribution guide</li>
       </ul>
