--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         <li>Try the build using the command mvn clean verify in the "releng" project.</li>
         <li>Setup the build of your repository on Travis CI</li>
         <li>Make sure that your build can publish the artifacts of your release on a Github release in your project.</li>
+        <li>Create a small webpage for your project on Github (just a small almost empty html will do the job)</li>
       </ul>
     </div>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
