--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
       </p>
       <ul>
         <li>You will create a regular Eclipse project named fr.univnantes.alma.oomph in a folder named resources of your Git repository.</li>
-        <li>Then, using the <a href="https://git.eclipse.org/c/acceleo/org.eclipse.acceleo.git/tree/releng/org.eclipse.acceleo.releng">setup file</a> of the project Acceleo as an inspiration, you will create a setup file named like your organisation in this project.</li>
-        <li>First test the setup file of Acceleo to retrieve a fully configured Eclipse for Acceleo using the <a href="https://www.eclipse.org/downloads/">Eclipse Installer</a> (Oomph). Have fun configuring the proxy of the university (in the advanced options). USE ECLIPSE MARS TO EDIT THE SETUP MODEL! To install an Acceleo development environment, launch the Eclipse Installer (Oomph), select a version of Eclipse, click next and drag and drop the Acceleo setup file. Double click this setup file in the interface and continue the installation.</li>
-        <li>The setup file should let a contributor create an Eclipse instance with your code checked out, the project fr.univnantes.alma.oomph imported in the workspace in a working set named Resources</li>
+        <li>Then, test the <a href="https://git.eclipse.org/c/acceleo/org.eclipse.acceleo.git/tree/releng/org.eclipse.acceleo.releng">setup file</a> of the project Acceleo by downloading it, you will create a setup file named like your organisation in this project after.</li>
+        <li>To test the setup file of Acceleo use the <a href="https://www.eclipse.org/downloads/">Eclipse Installer</a> (Oomph). Have fun configuring the proxy of the university (in the advanced options). USE ECLIPSE MARS TO EDIT THE SETUP MODEL! To install an Acceleo development environment, launch the Eclipse Installer (Oomph), select a version of Eclipse, click next and drag and drop the Acceleo setup file. Double click this setup file in the interface and continue the installation.</li>
+        <li>Create a new setup file in your project. Your setup file should let a contributor create an Eclipse instance with your code checked out, the project fr.univnantes.alma.oomph imported in the workspace in a working set named Resources</li>
         <li>Your setup file should only import your code properly, it should not configure anymore tools (you may have to remove things from the Acceleo setup file to add them back later on in additionals commit, it's normal)</li>
         <li>This setup file will be improved during the rest of the lesson.</li>
       </ul>
